--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "letcurly",
+  "name": "web-data-viz",
   "version": "1.0.0",
-  "description": "Projeto Individual",
+  "description": "",
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon --exec node app.js"
   },
-  "author": "Feito pela aluna Letícia da Fonseca Santos / Let Curly",
+  "author": "Feito pelos desenvolvedores @ São Paulo Tech School / Bandtec Digital School",
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
