--- a/.env.dev
+++ b/.env.dev
@@ -1,11 +1,19 @@
 AMBIENTE_PROCESSO=desenvolvimento
 
 # Configurações de conexão com o banco de dados
+
 DB_HOST=localhost
 DB_DATABASE='letcurly'
 DB_USER='root'
 DB_PASSWORD='968574'
 DB_PORT=3306
+
+# Configurações de conexão com o banco de dados da VM
+#DB_HOST=localhost
+#DB_DATABASE='letcurly'
+#DB_USER='projeto'
+#DB_PASSWORD='968574Let@'
+#DB_PORT=3307
 
 # Configurações do servidor de aplicação
 APP_PORT=3333
